--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -269,3 +269,35 @@ ubuntu-xenial-gcc-debug:
     CONTAINER: ubuntu:xenial
     debug: y
     XEN_TARGET_ARCH: x86_64
+
+ubuntu-bionic-clang:
+  <<: *build
+  variables:
+    <<: *clang
+    CONTAINER: ubuntu:bionic
+    debug: n
+    XEN_TARGET_ARCH: x86_64
+
+ubuntu-bionic-clang-debug:
+  <<: *build
+  variables:
+    <<: *clang
+    CONTAINER: ubuntu:bionic
+    debug: y
+    XEN_TARGET_ARCH: x86_64
+
+ubuntu-bionic-gcc:
+  <<: *build
+  variables:
+    <<: *gcc
+    CONTAINER: ubuntu:bionic
+    debug: n
+    XEN_TARGET_ARCH: x86_64
+
+ubuntu-bionic-gcc-debug:
+  <<: *build
+  variables:
+    <<: *gcc
+    CONTAINER: ubuntu:bionic
+    debug: y
+    XEN_TARGET_ARCH: x86_64
