--- a/automation/scripts/build
+++ b/automation/scripts/build
@@ -31,3 +31,17 @@ fi
 ./configure "${cfgargs[@]}"
 
 make -j$(nproc) dist
+
+# Build all the configs we care about
+case ${XEN_TARGET_ARCH} in
+    x86_64) arch=x86 ;;
+    *) exit 0 ;;
+esac
+
+cfg_dir="automation/configs/${arch}"
+for cfg in `ls ${cfg_dir}`; do
+    echo "Building $cfg"
+    rm -f xen/.config
+    make -C xen KBUILD_DEFCONFIG=../../../../${cfg_dir}/${cfg} XEN_CONFIG_EXPERT=y defconfig
+    make -j$(nproc) -C xen XEN_CONFIG_EXPERT=y
+done
