--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -302,6 +302,38 @@ ubuntu-bionic-gcc-debug:
     debug: y
     XEN_TARGET_ARCH: x86_64
 
+opensuse-leap-clang:
+  <<: *build
+  variables:
+    <<: *clang
+    CONTAINER: suse:opensuse-leap
+    debug: n
+    XEN_TARGET_ARCH: x86_64
+
+opensuse-leap-clang-debug:
+  <<: *build
+  variables:
+    <<: *clang
+    CONTAINER: suse:opensuse-leap
+    debug: y
+    XEN_TARGET_ARCH: x86_64
+
+opensuse-leap-gcc:
+  <<: *build
+  variables:
+    <<: *gcc
+    CONTAINER: suse:opensuse-leap
+    debug: n
+    XEN_TARGET_ARCH: x86_64
+
+opensuse-leap-gcc-debug:
+  <<: *build
+  variables:
+    <<: *gcc
+    CONTAINER: suse:opensuse-leap
+    debug: y
+    XEN_TARGET_ARCH: x86_64
+
 # Arm builds
 
 debian-unstable-gcc-arm64:
