--- a/automation/scripts/build
+++ b/automation/scripts/build
@@ -28,6 +28,10 @@ make -j$(nproc) dist
 
 # Extract artifacts to avoid getting rewritten by customised builds
 cp xen/.config xen-config
+mkdir binaries
+if [[ "${XEN_TARGET_ARCH}" == "x86_64" ]]; then
+    cp xen/xen binaries/xen
+fi
 
 # Build all the configs we care about
 case ${XEN_TARGET_ARCH} in
