--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -171,6 +171,26 @@ debian-jessie-gcc-debug:
   variables:
     CONTAINER: debian:jessie
 
+debian-jessie-32-clang:
+  extends: .clang-x86-32-build
+  variables:
+    CONTAINER: debian:jessie-i386
+
+debian-jessie-32-clang-debug:
+  extends: .clang-x86-32-build-debug
+  variables:
+    CONTAINER: debian:jessie-i386
+
+debian-jessie-32-gcc:
+  extends: .gcc-x86-32-build
+  variables:
+    CONTAINER: debian:jessie-i386
+
+debian-jessie-32-gcc-debug:
+  extends: .gcc-x86-32-build-debug
+  variables:
+    CONTAINER: debian:jessie-i386
+
 debian-stretch-clang:
   extends: .clang-x86-64-build
   variables:
