automation: add a qemu smoke test for clang build
Also rename the old test to have -gcc suffix.

Signed-off-by: Wei Liu <wei.liu2@citrix.com>
Acked-by: Doug Goldstein <cardoe@cardoe.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -383,7 +383,7 @@ debian-unstable-gcc-debug-arm64-randconfig:
 
 
 # Test jobs
-qemu-smoke-x86-64:
+qemu-smoke-x86-64-gcc:
   stage: test
   image: registry.gitlab.com/xen-project/xen/${CONTAINER}
   variables:
@@ -397,5 +397,22 @@ qemu-smoke-x86-64:
     when: always
   dependencies:
     - debian-stretch-gcc-debug
+  tags:
+    - x86_64
+
+qemu-smoke-x86-64-clang:
+  stage: test
+  image: registry.gitlab.com/xen-project/xen/${CONTAINER}
+  variables:
+    CONTAINER: debian:stretch
+  script:
+    - ./automation/scripts/qemu-smoke-x86-64.sh 2>&1 | tee qemu-smoke-x86-64.log
+  artifacts:
+    paths:
+      - smoke.serial
+      - '*.log'
+    when: always
+  dependencies:
+    - debian-unstable-clang-debug
   tags:
     - x86_64
